semantics/oracle/tests/snapshots/better_api_semantics__oracle__tests__compare__compare_integer_enum_mismatch.snap
---
source: semantics/oracle/tests/compare.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "integer `3` is not a valid enum member",
        labels: [
            Label {
                style: Primary,
                message: "not a valid enum member",
                span: Span {
                    start: 73,
                    end: 74,
                },
            },
            Label {
                style: Secondary,
                message: "enum defined here",
                span: Span {
                    start: 11,
                    end: 37,
                },
            },
        ],
        note: Some(
            "help: integer has to be equal to one of the enum members",
        ),
    },
]
