semantics/oracle/tests/snapshots/better_api_semantics__oracle__tests__compare__compare_option_inner_mismatch.snap
---
source: semantics/oracle/tests/compare.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "expected i32, found string",
        labels: [
            Label {
                style: Primary,
                message: "expected i32, found string",
                span: Span {
                    start: 34,
                    end: 40,
                },
            },
            Label {
                style: Secondary,
                message: "type defined here",
                span: Span {
                    start: 53,
                    end: 56,
                },
            },
        ],
        note: None,
    },
]
